# hormuz-ds

./: .gitignore  .structure.yml  CLAUDE.md  README.md  pyproject.toml
configs/: config.yaml  config.yaml.example  constants.yaml  parameters.yaml
data/: annotation_template.yaml  prompt_changelog.yaml  prompt_patches.yaml  seed_all.yaml  seed_o01.yaml  status.html
data/reports/: 20260317-0810.md  20260317-0824.md  20260317-0833.md  20260317-0842.md  20260317-0854.md  20260317-0855.md  20260317-1201.md  20260317-1605.md  20260317-2001.md  20260318-0806.md  20260318-1201.md  20260318-1604.md  20260318-2002.md  20260319-0810.md  20260319-1201.md  20260319-1603.md  20260319-2003.md  20260320-0809.md  20260320-1202.md  20260320-1603.md  20260320-2005.md  20260321-0808.md  20260321-1201.md  20260321-1602.md  20260321-2001.md  20260322-0805.md  20260322-1202.md  20260322-1601.md  20260322-2003.md  20260323-0806.md  20260323-1203.md  20260323-1602.md  20260323-2002.md  20260324-0808.md  20260324-1202.md  20260324-1603.md  20260324-2002.md  20260325-0806.md  20260325-1201.md  20260325-1600.md  (+23 more)
docs/: calibration-plan.md  data-architecture.md  index.html  ref-v54-analysis.md  ref-v54-backend-prd.md
docs/plans/: 2026-03-11-hormuz-ds-design.md  (+3 more)
scripts/: load_seed.py  run.sh  sync_octopus.sh
templates/: formula-v54.html  status.html.jinja
tests/: conftest.py  test_ach.py  test_analyzer.py  test_db.py  test_ingester.py  test_llm.py  test_mc.py  test_models.py  test_physical.py  test_pipeline.py  test_positions.py  test_reporter.py  test_schelling.py  test_signals.py
(+60 files in other folders)
